[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/game/maps/tile_base.png" type="Texture" id=1]
[ext_resource path="res://content/src/game/entities/interact/interact_area.gd" type="Script" id=2]
[ext_resource path="res://content/src/game/entities/platform/platform_control.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[node name="PlatformControl" type="RigidBody2D"]
collision_layer = 12
collision_mask = 12
mode = 1
mass = 100.0
linear_damp = 7.879
angular_damp = 100000.0
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 8, -16, 0, 0, -8, 16, 0 )

[node name="BaseSprite" type="Sprite" parent="."]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )

[node name="ChromaSprite" type="Sprite" parent="."]
light_mask = 1024
material = SubResource( 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )

[node name="InteractArea" type="Area2D" parent="."]
position = Vector2( 0, -16 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractArea"]
visible = false
position = Vector2( 0, 16 )
polygon = PoolVector2Array( -16, 0, -16, -16, 0, -24, 16, -16, 16, 0, 0, 8 )

[node name="Timer" type="Timer" parent="."]

[connection signal="triggered" from="InteractArea" to="." method="_on_InteractArea_triggered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
